--- a/Homework_Demchenko_06-03-20/hw3_task5_index.html
+++ b/Homework_Demchenko_06-03-20/hw3_task5_index.html
@@ -13,6 +13,15 @@
 
      <div class="circle" id=circle></div>
 
+     <style>
+         .circle{
+         width: 1px;
+         height: 1px;
+         background-color: blue;
+         border-radius: 50%;
+         }
+     </style>
+
      <script src="hw3_task5.js"></script>
 
 </body>
